Fix parser for updated site, simple form

--- a/sfxtracker/templates/index.html
+++ b/sfxtracker/templates/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title></title>
+    <title>SFX Tracker</title>
 </head>
 <body>
     <h1>SFX Tracker</h1>
+    <form method="post">
+        <p><input type="text" name="url"></p>
+        <p><input type="text" name="email"></p>
+        <p><input type="submit"></p>
+    </form>
 </body>
 </html>
